--- a/pages-login.html
+++ b/pages-login.html
@@ -91,11 +91,11 @@
                     </div>
                     <div class="col-12">
                       <p class="small mb-0">Don't have account? <a href="pages-register.html">Create an account</a></p>
-                    </div>fefewfewffqewqeq
+                    </div>fefewfewffqewqeqaaaa
                   </form>123
 tetstts
                 </div>
-              </div>e32131323121
+              </div>e32131323121232323
 
               <div class="credits">fdfdfdfdfdfdsfsfdfsdf
                 <!-- All the links in the footer should remain intact. -->
